--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<h1>Yandex Test</h1>
 	<p style="text-align:right;">Sergei Tumanov</p>
-	<form id="myForm">
+	<form id="myForm" action="/data/progress.json">
 		<table class="form_table">
 			<tr>
 				<td>ФИО:</td>
